bk_ida/gccida/g0/signed_type
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/signed_type/src/c-common.c:1935:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *type1; // [rsp+18h] [rbp-8h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/signed_type/src/c-common.c:1950:28: error: expected expression
if ( type1 == ( tree_node *)*( &global_trees + 10) ) 
                           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/signed_type/src/c-common.c:1950:17: error: use of undeclared identifier 'tree_node'
if ( type1 == ( tree_node *)*( &global_trees + 10) ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/signed_type/src/c-common.c:1952:28: error: expected expression
if ( type1 == ( tree_node *)*( &global_trees + 9) ) 
                           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/signed_type/src/c-common.c:1952:17: error: use of undeclared identifier 'tree_node'
if ( type1 == ( tree_node *)*( &global_trees + 9) ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/signed_type/src/c-common.c:1954:28: error: expected expression
if ( type1 == ( tree_node *)*( &global_trees + 8) ) 
                           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/signed_type/src/c-common.c:1954:17: error: use of undeclared identifier 'tree_node'
if ( type1 == ( tree_node *)*( &global_trees + 8) ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/signed_type/src/c-common.c:1956:28: error: expected expression
if ( type1 == ( tree_node *)*( &global_trees + 7) ) 
                           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/signed_type/src/c-common.c:1956:17: error: use of undeclared identifier 'tree_node'
if ( type1 == ( tree_node *)*( &global_trees + 7) ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/signed_type/src/c-common.c:1958:28: error: expected expression
if ( type1 == ( tree_node *)*( &global_trees + 6) ) 
                           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/signed_type/src/c-common.c:1958:17: error: use of undeclared identifier 'tree_node'
if ( type1 == ( tree_node *)*( &global_trees + 6) ) 
                ^
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/signed_type/src/obj/c-common.o] Error 1
